--- a/Multi_AI_Agents_Chatbots_With_External_Tools_With_LangGraph.ipynb
+++ b/Multi_AI_Agents_Chatbots_With_External_Tools_With_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLikPdMOFaqcgKBVWY9IIh",
+      "authorship_tag": "ABX9TyM4CDM+nClX4PbdJlNSH13y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,68 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Installing Liberaries"
+      ],
+      "metadata": {
+        "id": "tl0qd2gTHO8g"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "9eBzCD466nnA"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "!pip install langgraph langsmith langchain langchain_groq langchain_community"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# For State Management"
+      ],
+      "metadata": {
+        "id": "J-3uQSOzHuOT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from typing import Annotated\n",
+        "from typing_extensions import TypedDict"
+      ],
+      "metadata": {
+        "id": "Pkw1sGgUHymL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Working with External Tools\n",
+        "### **Arxiv API Integration**: The wrapper effectively leverages the Arxiv API to perform efficient and accurate searches for scientific papers.\n",
+        "\n",
+        "### Researchers can use this wrapper to quickly find and explore relevant scientific literature on their areas of interest, saving time and effort."
+      ],
+      "metadata": {
+        "id": "-haeCwXRIKcw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain_community.utilities import ArxivAPIWrapper, WikipediaAPIWrapper"
+      ],
+      "metadata": {
+        "id": "xp9vLq_YINt_"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
