--- a/Multi_AI_Agents_Chatbots_With_External_Tools_With_LangGraph.ipynb
+++ b/Multi_AI_Agents_Chatbots_With_External_Tools_With_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM4CDM+nClX4PbdJlNSH13y",
+      "authorship_tag": "ABX9TyPr6Jum1mfudsY/yY3i5itp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,6 +68,17 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!pip install arxiv wikipedia"
+      ],
+      "metadata": {
+        "id": "RLq-6y5yLun6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Working with External Tools\n",
@@ -82,10 +93,52 @@
     {
       "cell_type": "code",
       "source": [
-        "from langchain_community.utilities import ArxivAPIWrapper, WikipediaAPIWrapper"
+        "from langchain_community.utilities import ArxivAPIWrapper, WikipediaAPIWrapper\n",
+        "from langchain_community.tools import ArxivQueryRun, WikipediaQueryRun"
       ],
       "metadata": {
         "id": "xp9vLq_YINt_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arxiv_wrapper = ArxivAPIWrapper(top_k_results=1, doc_content_chars_max=300)\n",
+        "arxiv_tool = ArxivQueryRun(api_wrapper=arxiv_wrapper)"
+      ],
+      "metadata": {
+        "id": "oQdTKoceLUGC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a Wikipedia API wrapper\n",
+        "api_wrapper = WikipediaAPIWrapper(top_k_results=1, doc_content_chars_max=300)\n",
+        "# Create a Wikipedia query tool\n",
+        "wiki_tool = WikipediaQueryRun(api_wrapper=api_wrapper)"
+      ],
+      "metadata": {
+        "id": "pmqLbCuxLbJn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Invoke the tool with the query\n",
+        "result = wiki_tool.invoke(\"What is Generative AI?\")\n",
+        "\n",
+        "# Print the result\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "id": "w2eEGxdrNeI4"
       },
       "execution_count": null,
       "outputs": []
