--- a/Multi_AI_Agents_Chatbots_With_External_Tools_With_LangGraph.ipynb
+++ b/Multi_AI_Agents_Chatbots_With_External_Tools_With_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPr6Jum1mfudsY/yY3i5itp",
+      "authorship_tag": "ABX9TyPFzZuE57OAFosJlQbbloBa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -139,6 +139,57 @@
       ],
       "metadata": {
         "id": "w2eEGxdrNeI4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Invoke the tool with the query\n",
+        "result = arxiv_tool.invoke(\"Attention is all you need\")\n",
+        "\n",
+        "# Print the result\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "id": "9kV0Ms0OOHm1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a list of tools\n",
+        "tools = [wiki_tool]"
+      ],
+      "metadata": {
+        "id": "TAlW1p4qOjLr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Lang Graph Application"
+      ],
+      "metadata": {
+        "id": "AZWfqwO3Ovs4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langgraph.graph.message import add_messages\n",
+        "from typing_extensions import TypedDict\n",
+        "\n",
+        "class State(TypedDict):\n",
+        "    messages: Annotated[list, add_messages]"
+      ],
+      "metadata": {
+        "id": "n1V0SHuWOzyK"
       },
       "execution_count": null,
       "outputs": []
