--- a/Multi_AI_Agents_Chatbots_With_External_Tools_With_LangGraph.ipynb
+++ b/Multi_AI_Agents_Chatbots_With_External_Tools_With_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPFzZuE57OAFosJlQbbloBa",
+      "authorship_tag": "ABX9TyNZmPb4NQZh15SrDT9CicDH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -190,6 +190,123 @@
       ],
       "metadata": {
         "id": "n1V0SHuWOzyK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Designing Workflow"
+      ],
+      "metadata": {
+        "id": "UCG-mq-IUGI3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langgraph.graph import StateGraph, START, END"
+      ],
+      "metadata": {
+        "id": "npzCJd65UKGs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a new StateGraph instance\n",
+        "graph_builder = StateGraph(State)"
+      ],
+      "metadata": {
+        "id": "RpEZgNEwU3fr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Calling LLM Model"
+      ],
+      "metadata": {
+        "id": "_Komsn2bU8tN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain_groq import ChatGroq"
+      ],
+      "metadata": {
+        "id": "VHzIAg1PVA4T"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import userdata\n",
+        "groq_api_key = userdata.get(\"groq_api_key\")"
+      ],
+      "metadata": {
+        "id": "aiZr8MBBWDxb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Model = Gemma2-9b-It**"
+      ],
+      "metadata": {
+        "id": "_p8DlcfbXImz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "llm=ChatGroq(groq_api_key=groq_api_key, model_name=\"Gemma2-9b-It\")\n",
+        "llm"
+      ],
+      "metadata": {
+        "id": "8BHEjhDhWpRc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Creating Chatbot\n"
+      ],
+      "metadata": {
+        "id": "Md9OJhQrXURp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "llm_with_tools = llm.bind_tools(tools=tools)"
+      ],
+      "metadata": {
+        "id": "L55qQUFJXXOT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def chatbot(state: State):\n",
+        "    return {\"messages\": [llm_with_tools.invoke(state[\"messages\"])]}"
+      ],
+      "metadata": {
+        "id": "c-1VvT5dd2uW"
       },
       "execution_count": null,
       "outputs": []
