--- a/Multi_AI_Agents_Chatbots_With_External_Tools_With_LangGraph.ipynb
+++ b/Multi_AI_Agents_Chatbots_With_External_Tools_With_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZmPb4NQZh15SrDT9CicDH",
+      "authorship_tag": "ABX9TyMmpJpI9OGp8qIIyl95pYMS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -307,6 +307,113 @@
       ],
       "metadata": {
         "id": "c-1VvT5dd2uW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Creating Entire Flow of Execution"
+      ],
+      "metadata": {
+        "id": "fRhec0o8ewHl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langgraph.prebuilt import ToolNode, tools_condition"
+      ],
+      "metadata": {
+        "id": "1gE2yMs7e134"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "graph_builder.add_node(\"chatbot\", chatbot)\n",
+        "graph_builder.add_edge(START, \"chatbot\")\n",
+        "tool_node = ToolNode(tools=tools)\n",
+        "graph_builder.add_node(\"tools\", tool_node)\n",
+        "\n",
+        "graph_builder.add_conditional_edges(\n",
+        "    \"chatbot\",\n",
+        "    tools_condition\n",
+        ")\n",
+        "\n",
+        "graph_builder.add_edge(\"tools\", \"chatbot\")\n",
+        "graph_builder.add_edge(\"chatbot\", END)"
+      ],
+      "metadata": {
+        "id": "g4mdTbI3hXZa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Compilation"
+      ],
+      "metadata": {
+        "id": "nD51R8Fyhj02"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "graph = graph_builder.compile()"
+      ],
+      "metadata": {
+        "id": "R1-k4uI0hnQ4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from IPython.display import Image, display\n",
+        "\n",
+        "try:\n",
+        "    display(Image(graph.get_graph().draw_mermaid_png()))\n",
+        "except Exception:\n",
+        "    # This requires some extra dependencies and is optional\n",
+        "    pass"
+      ],
+      "metadata": {
+        "id": "I8-B55QUiFFi"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Testing"
+      ],
+      "metadata": {
+        "id": "oeFTMzhbiXXO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "user_input = \"Hi there!, My name is Krish\"\n",
+        "\n",
+        "events = graph.stream(\n",
+        "    {\"messages\": [(\"user\", user_input)]},\n",
+        "    stream_mode=\"values\"\n",
+        ")\n",
+        "\n",
+        "for event in events:\n",
+        "    event[\"messages\"][-1].pretty_print()"
+      ],
+      "metadata": {
+        "id": "bwBbnErAiZL_"
       },
       "execution_count": null,
       "outputs": []
