--- a/Multi_AI_Agents_Chatbots_With_External_Tools_With_LangGraph.ipynb
+++ b/Multi_AI_Agents_Chatbots_With_External_Tools_With_LangGraph.ipynb
@@ -402,7 +402,7 @@
     {
       "cell_type": "code",
       "source": [
-        "user_input = \"Hi there!, My name is Krish\"\n",
+        "user_input = \"Hi there!, My name is Zulfiqar\"\n",
         "\n",
         "events = graph.stream(\n",
         "    {\"messages\": [(\"user\", user_input)]},\n",
